@@ -12,10 +12,12 @@ import com.example.contentservice.exceptions.CalendarException;
 import jakarta.transaction.Transactional;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -25,8 +27,10 @@ public class CalendarService {
   private final CalendarRepository calendarRepository;
   private final CacheManager cacheManager;
 
-  @CacheEvict(value = "calendar", key = "'monthly:' + #orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue()")
-  @Transactional
+  @Caching(evict = {
+      @CacheEvict(value = "calendar_monthly", key = "#orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue()"),
+      @CacheEvict(value = "calendar_daily", key = "#orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue() + '-' + #requestDto.date.getDayOfMonth()")
+  })  @Transactional
   public CreateScheduleResponseDto createSchedule(Long orgId, CreateScheduleRequestDto requestDto) {
     Schedules schedule = Schedules.builder()
         .orgId(orgId)
@@ -39,8 +43,7 @@ public class CalendarService {
     return new CreateScheduleResponseDto(savedSchedule);
   }
 
-  @Cacheable(value = "calendar", key = "'monthly:' + #orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue()")
-  public List<ScheduleResponseDto> findAllSchedulesByMonth(Long orgId,
+  @Cacheable(value = "calendar_monthly", key = "#orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue()")  public List<ScheduleResponseDto> findAllSchedulesByMonth(Long orgId,
       FindScheduleRequestDto requestDto) {
     LocalDate curr = requestDto.getDate();
     LocalDate start = curr.withDayOfMonth(1);
@@ -48,16 +51,20 @@ public class CalendarService {
 
     List<Schedules> schedules = calendarRepository.findAllByOrgIdAndDateBetween(orgId, start, end);
 
-    return schedules.stream().map(ScheduleResponseDto::new).toList();
+    return schedules.stream()
+        .map(ScheduleResponseDto::new)
+        .collect(Collectors.toList());
   }
 
-  public List<ScheduleResponseDto> findAllSchedulesByDate(Long orgId,
+  @Cacheable(value = "calendar_daily", key = "#orgId + ':' + #requestDto.date.getYear() + '-' + #requestDto.date.getMonthValue() + '-' + #requestDto.date.getDayOfMonth()")  public List<ScheduleResponseDto> findAllSchedulesByDate(Long orgId,
       FindScheduleRequestDto requestDto) {
     List<Schedules> schedules = calendarRepository.findAllByOrgIdAndDateBetween(orgId,
         requestDto.getDate(),
         requestDto.getDate());
 
-    return schedules.stream().map(ScheduleResponseDto::new).toList();
+    return schedules.stream()
+        .map(ScheduleResponseDto::new)
+        .collect(Collectors.toList());
   }
 
   @Transactional
@@ -68,24 +75,30 @@ public class CalendarService {
       throw new NoAuthorizedException(CalendarException.NO_AUTHORIZATION);
     }
 
-    // 변경 전 기존 일정의 캐시 키 생성
-    String oldCacheKey =
-        "monthly:" + orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate()
-            .getMonthValue();
-    // 변경 후 새로운 일정의 캐시 키 생성
-    String newCacheKey =
-        "monthly:" + orgId + ":" + requestDto.getDate().getYear() + "-" + requestDto.getDate()
-            .getMonthValue();
+    // 수동 캐시 키에서 "calendar_monthly:" 같은 접두사 문자열 제거
+    String oldMonthlyCacheKey = orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate().getMonthValue();
+    String oldDailyCacheKey = orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate().getMonthValue() + "-" + findSchedule.getDate().getDayOfMonth();
+
+    String newMonthlyCacheKey = orgId + ":" + requestDto.getDate().getYear() + "-" + requestDto.getDate().getMonthValue();
+    String newDailyCacheKey = orgId + ":" + requestDto.getDate().getYear() + "-" + requestDto.getDate().getMonthValue() + "-" + requestDto.getDate().getDayOfMonth();
 
     findSchedule.update(requestDto.getDate(), requestDto.getTitle(), requestDto.getContent());
 
-    // 기존 월과 새로운 월의 캐시를 모두 무효화
-    if (cacheManager.getCache("calendar") != null) {
-      cacheManager.getCache("calendar").evict(oldCacheKey);
-      if (!oldCacheKey.equals(newCacheKey)) {
-        cacheManager.getCache("calendar").evict(newCacheKey);
+    // CacheManager에서 분리된 캐시 이름("calendar_monthly", "calendar_daily")을 정확히 찾아서 지움
+    if (cacheManager.getCache("calendar_monthly") != null) {
+      cacheManager.getCache("calendar_monthly").evict(oldMonthlyCacheKey);
+      if (!oldMonthlyCacheKey.equals(newMonthlyCacheKey)) {
+        cacheManager.getCache("calendar_monthly").evict(newMonthlyCacheKey);
       }
     }
+
+    if (cacheManager.getCache("calendar_daily") != null) {
+      cacheManager.getCache("calendar_daily").evict(oldDailyCacheKey);
+      if (!oldDailyCacheKey.equals(newDailyCacheKey)) {
+        cacheManager.getCache("calendar_daily").evict(newDailyCacheKey);
+      }
+    }
+
     return new ScheduleResponseDto(findSchedule);
   }
 
@@ -96,16 +109,18 @@ public class CalendarService {
       throw new NoAuthorizedException(CalendarException.NO_AUTHORIZATION);
     }
 
-    // 삭제할 일정의 날짜 기반으로 캐시 키 생성
-    String cacheKey =
-        "monthly:" + orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate()
-            .getMonthValue();
+    // 수동 캐시 키에서 접두사 문자열 제거
+    String monthlyCacheKey = orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate().getMonthValue();
+    String dailyCacheKey = orgId + ":" + findSchedule.getDate().getYear() + "-" + findSchedule.getDate().getMonthValue() + "-" + findSchedule.getDate().getDayOfMonth();
 
     calendarRepository.delete(findSchedule);
 
-    // 수동으로 캐시 삭제
-    if (cacheManager.getCache("calendar") != null) {
-      cacheManager.getCache("calendar").evict(cacheKey);
+    // 정확한 이름의 캐시를 찾아서 삭제
+    if (cacheManager.getCache("calendar_monthly") != null) {
+      cacheManager.getCache("calendar_monthly").evict(monthlyCacheKey);
+    }
+    if (cacheManager.getCache("calendar_daily") != null) {
+      cacheManager.getCache("calendar_daily").evict(dailyCacheKey);
     }
   }
 }
